Updates to Bonn reference file

--- a/paper/tex/bonn.bib
+++ b/paper/tex/bonn.bib
@@ -38,15 +38,15 @@
   author = {Regina Ammer and Matthias Markl and Ulric Ljungblad and Carolin K{\"o}rner
 	and Ulrich R{\"u}de},
   title = {Simulating fast electron beam melting with a parallel thermal free
-	surface lattice Boltzmann method },
-  journal = {Computers \& Mathematics with Applications },
+	surface lattice {B}oltzmann method},
+  journal = {Computers {\&} Mathematics with Applications},
   year = {2014},
   volume = {67},
   pages = {318 - 330},
   number = {2},
   note = {Mesoscopic Methods for Engineering and Science (Proceedings of ICMMES-2012,
-	Taipei, Taiwan, 23--27 July 2012) },
-  abstract = {Abstract This paper introduces a three dimensional (3D) thermal lattice
+	Taipei, Taiwan, 23--27 July 2012)},
+  abstract = {This paper introduces a three dimensional (3D) thermal lattice
 	Boltzmann method for the simulation of electron beam melting processes.
 	The multi-distribution approach incorporates a state-of-the-art volume
 	of fluid free surface method to handle the complex interaction between
@@ -58,7 +58,7 @@
 	the high computational costs of 3D simulations. Finally, a thorough
 	validation of the heat equation and the solid-liquid phase transition
 	demonstrates the capability of the approach to considerably improve
-	the electron beam melting process. },
+	the electron beam melting process.},
   doi = {http://dx.doi.org/10.1016/j.camwa.2013.10.001},
   file = {AmmerMarklLjungbladEtAl14,.pdf:pdfAF/AmmerMarklLjungbladEtAl14,.pdf:PDF},
   issn = {0898-1221},
@@ -302,24 +302,24 @@
 @ARTICLE{BognerMohantyRuede15,
   author = {Simon Bogner and Swati Mohanty and Ulrich Rüde},
   title = {Drag correlation for dilute and moderately dense fluid-particle systems
-	using the lattice Boltzmann method },
-  journal = {International Journal of Multiphase Flow },
+	using the lattice {B}oltzmann method},
+  journal = {International Journal of Multiphase Flow},
   year = {2015},
   volume = {68},
   pages = {71 - 79},
   number = {0},
-  abstract = {Abstract This paper presents a numerical study of flow through static
+  abstract = {This paper presents a numerical study of flow through static
 	random assemblies of monodisperse, spherical particles. A lattice
 	Boltzmann approach based on a two relaxation time collision operator
 	is used to obtain reliable predictions of the particle drag by direct
-	numerical simulation. From these predictions a closure law F ( Re
-	p , φ ) of the drag force relationship to the bed density φ and the
+	numerical simulation. From these predictions a closure law F (Re
+	p, {\phi}) of the drag force relationship to the bed density φ and the
 	particle Reynolds number Re p is derived. The present study includes
 	densities φ ranging from 0.01 to 0.35 with Re p ranging up to 300,
 	that is compiled into a single drag correlation valid for the whole
 	range. The correlation has a more compact expression compared to
 	others previously reported in literature. At low particle densities,
-	the new correlation is close to the widely-used Wen &amp; Yu – correlation.
+	the new correlation is close to the widely-used Wen {\&} Yu - correlation.
 	Recently, there has been reported a discrepancy between results obtained
 	using different numerical methods, namely the comprehensive lattice
 	Boltzmann study of Beetstra et al. (2007) and the predictions based
@@ -328,7 +328,7 @@
 	resolution effects, which have been suspected to cause the reported
 	deviations, but does not coincide exactly with either of the previous
 	studies. This indicates the need for yet more accurate simulation
-	methods in the future. },
+	methods in the future.},
   doi = {http://dx.doi.org/10.1016/j.ijmultiphaseflow.2014.10.001},
   issn = {0301-9322},
   url = {http://www.sciencedirect.com/science/article/pii/S0301932214001803}
@@ -336,13 +336,13 @@
 
 @ARTICLE{BognerRuede13,
   author = {Simon Bogner and Ulrich R{\"u}de},
-  title = {Simulation of floating bodies with the lattice Boltzmann method },
-  journal = {Computers \& Mathematics with Applications },
+  title = {Simulation of floating bodies with the lattice {B}oltzmann method},
+  journal = {Computers {\&} Mathematics with Applications},
   year = {2013},
   volume = {65},
   pages = {901 - 913},
   number = {6},
-  note = {Mesoscopic Methods in Engineering and Science },
+  note = {Mesoscopic Methods in Engineering and Science},
   abstract = {This paper is devoted to the simulation of floating rigid bodies in
 	free surface flows. For that, a lattice Boltzmann based model for
 	liquid gas solid flows is presented. The approach is built upon previous
@@ -358,7 +358,7 @@
 	on a plane water surfaces a classical hydrostatic problem known from
 	naval architecture. We show the consistency of our method in this
 	kind of flows and obtain convergence towards the ideal solution for
-	the heeling stability of a floating box. },
+	the heeling stability of a floating box.},
   doi = {http://dx.doi.org/10.1016/j.camwa.2012.09.012},
   file = {BognerRuede13.pdf:pdfAF/BognerRuede13.pdf:PDF},
   issn = {0898-1221},
@@ -427,15 +427,6 @@
   owner = {cbins}
 }
 
-@unpublished{IsaacBursteddeWilcoxEtAl15,
-  author = {Tobin Isaac and Carsten Burstedde and Lucas C. Wilcox and Omar Ghattas},
-  title = {Recursive algorithms for distributed forests of octrees},
-  year = {2015},
-  note = {Accepted for publication in SIAM Journal on Scientific Computing},
-  owner = {cbins},
-  url = {http://arxiv.org/abs/1406.0089}
-}
-
 @ARTICLE{CahouetChabard88,
   author = {Cahouet, J and Chabard, J-P},
   title = {Some fast 3D finite element solvers for the generalized Stokes problem},
@@ -490,14 +481,14 @@
   author = {Stefan Donath and Klaus Mecke and Swapna Rabha and Vivek Buwa and
 	Ulrich R{\"u}de},
   title = {Verification of surface tension in the parallel free surface lattice
-	Boltzmann method in waLBerla },
-  journal = {Computers \& Fluids },
+           {B}oltzmann method in {waLBerla}},
+  journal = {Computers {\&} Fluids},
   year = {2011},
   volume = {45},
   pages = {177 - 186},
   number = {1},
   note = {22nd International Conference on Parallel Computational Fluid Dynamics
-	(ParCFD 2010) ParCFD },
+	(ParCFD 2010) ParCFD},
   abstract = {The free surface lattice Boltzmann method in the parallel software
 	framework waLBerla solves a wide range of two-phase flow scenarios
 	efficiently by neglecting the gas flow and only taking the gas pressure
@@ -512,7 +503,7 @@
 	and checking the agreement of a rising bubble velocity with experiments.
 	The results show that the method differs less than 10 percent from
 	theory in the micro-scale, and lies well within the confidence interval
-	of experimental measurements. },
+	of experimental measurements.},
   doi = {http://dx.doi.org/10.1016/j.compfluid.2010.12.027},
   file = {DonathMeckeRabhaEtAl11.pdf:pdfAF/DonathMeckeRabhaEtAl11.pdf:PDF},
   issn = {0045-7930},
@@ -557,14 +548,13 @@
 @ARTICLE{FeichtingerDonathKoestlerEtAl11,
   author = {C. Feichtinger and S. Donath and H. K{\"o}stler and J. G{\"o}tz and
 	U. R{\"u}de},
-  title = {WaLBerla: \{HPC\} software design for computational engineering simulations
-	},
-  journal = {Journal of Computational Science },
+  title = {WaLBerla: {HPC} software design for computational engineering simulations},
+  journal = {Journal of Computational Science},
   year = {2011},
   volume = {2},
   pages = {105 - 112},
   number = {2},
-  note = {Simulation Software for Supercomputers },
+  note = {Simulation Software for Supercomputers},
   abstract = {WaLBerla (Widely applicable Lattice-Boltzmann from Erlangen) is a
 	massively parallel software framework supporting a wide range of
 	physical phenomena. This article describes the software designs realizing
@@ -573,9 +563,9 @@
 	kernels. To demonstrate our designs, we discuss the coupling of our
 	Lattice-Boltzmann fluid flow solver and a method for fluid structure
 	interaction. Additionally, we show a software design for heterogeneous
-	computations on \{GPU\} and \{CPU\} utilizing optimized kernels.
+	computations on {GPU} and {CPU} utilizing optimized kernels.
 	Finally, we estimate the software quality of the framework on the
-	basis of software quality factors. },
+	basis of software quality factors.},
   doi = {http://dx.doi.org/10.1016/j.jocs.2011.01.004},
   file = {FeichtingerDonathKoestlerEtAl11.pdf:pdfAF/FeichtingerDonathKoestlerEtAl11.pdf:PDF},
   issn = {1877-7503},
@@ -587,19 +577,19 @@
 @ARTICLE{FeichtingerHabichKostlerEtAl15,
   author = {Christian Feichtinger and Johannes Habich and Harald K{\"o}stler
 	and Ulrich R{\"u}de and Takayuki Aoki},
-  title = {Performance modeling and analysis of heterogeneous lattice Boltzmann
-	simulations on CPU–GPU clusters },
-  journal = {Parallel Computing },
+  title = {Performance modeling and analysis of heterogeneous lattice {B}oltzmann
+	simulations on {CPU-GPU} clusters},
+  journal = {Parallel Computing},
   year = {2015},
   volume = {46},
-  pages = {1 - 13},
+  pages = {1-13},
   number = {0},
-  abstract = {Abstract Computational fluid dynamic simulations are in general very
+  abstract = {Computational fluid dynamic simulations are in general very
 	compute intensive. Only by parallel simulations on modern supercomputers
 	the computational demands of complex simulation tasks can be satisfied.
-	Facing these computational demands \{GPUs\} offer high performance,
+	Facing these computational demands {GPUs} offer high performance,
 	as they provide the high floating point performance and memory to
-	processor chip bandwidth. To successfully utilize \{GPU\} clusters
+	processor chip bandwidth. To successfully utilize {GPU} clusters
 	for the daily business of a large community, usable software frameworks
 	must be established on these clusters. The development of such software
 	frameworks is only feasible with maintainable software designs that
@@ -609,15 +599,15 @@
 	software framework waLBerla for multi-physics simulations centered
 	around the lattice Boltzmann method. Our software designs now also
 	support a pure-MPI and a hybrid parallelization approach capable
-	of heterogeneous simulations using \{CPUs\} and \{GPUs\} in parallel.
+	of heterogeneous simulations using {CPUs} and {GPUs} in parallel.
 	For the first time weak and strong scaling performance results obtained
-	on the Tsubame 2.0 cluster for more than 1000 \{GPUs\} are presented
+	on the Tsubame 2.0 cluster for more than 1000 {GPUs} are presented
 	using waLBerla. With the help of a new communication model the parallel
 	efficiency of our implementation is investigated and analyzed in
 	a detailed and structured performance analysis. The suitability of
-	the waLBerla framework for production runs on large \{GPU\} clusters
+	the waLBerla framework for production runs on large {GPU} clusters
 	is demonstrated. As one possible application we show results of strong
-	scaling experiments for flows through a porous medium. },
+	scaling experiments for flows through a porous medium.},
   doi = {http://dx.doi.org/10.1016/j.parco.2014.12.003},
   issn = {0167-8191},
   keywords = {Lattice Boltzmann method},
@@ -634,37 +624,16 @@
   owner = {cbins}
 }
 
-@INPROCEEDINGS{GoetzIglbergerStuermerEtAl10,
-  author = {G\"{o}tz, Jan and Iglberger, Klaus and St\"{u}rmer, Markus and R\"{u}de,
-	Ulrich},
-  title = {Direct Numerical Simulation of Particulate Flows on 294912 Processor
-	Cores},
-  booktitle = {Proceedings of the 2010 ACM/IEEE International Conference for High
-	Performance Computing, Networking, Storage and Analysis},
-  year = {2010},
-  series = {SC '10},
-  pages = {1--11},
-  address = {Washington, DC, USA},
-  publisher = {IEEE Computer Society},
-  acmid = {1884697},
-  doi = {10.1109/SC.2010.20},
-  file = {GoetzIglbergerStuermerEtAl10.pdf:pdfGM/GoetzIglbergerStuermerEtAl10.pdf:PDF},
-  isbn = {978-1-4244-7559-9},
-  numpages = {11},
-  owner = {cbins},
-  url = {http://dx.doi.org/10.1109/SC.2010.20}
-}
-
 @ARTICLE{FreudigerHegewaldKrafczyk08,
   author = {Soren Freudiger and Jan Hegewald and Manfred Krafczyk},
-  title = {A parallelisation concept for a multi-physics lattice Boltzmann prototype
+  title = {A parallelisation concept for a multi-physics lattice {B}oltzmann prototype
 	based on hierarchical grids},
   journal = {Progress in Computational Fluid Dynamics, an International Journal},
   year = {2008},
   volume = {8},
   pages = {168-178},
   number = {1-4},
-  abstract = { This paper introduces a generalised parallelisation concept for lattice
+  abstract = {This paper introduces a generalised parallelisation concept for lattice
 	Boltzmann (LB) simulations. Our main goal was to combine two approaches
 	to speed up LB computations: parallelisation combined with an efficient
 	implementation and utilisation of non uniform tree-type Cartesian
@@ -674,7 +643,7 @@
 	In addition, an abstract rule set was developed which can handle
 	e.g., specific user definable discretisation stencils. Finally we
 	simulated a tandem cylinder flow to validate the method as well as
-	the implementation in 2D. },
+	the implementation in 2D.},
   doi = {10.1504/PCFD.2008.018087},
   eprint = {http://www.inderscienceonline.com/doi/pdf/10.1504/PCFD.2008.018087},
   url = {http://www.inderscienceonline.com/doi/abs/10.1504/PCFD.2008.018087}
@@ -701,9 +670,30 @@
   url = {http://dx.doi.org/10.1109/SC.2010.20}
 }
 
+@INPROCEEDINGS{GotzIglbergerSturmerEtAl10,
+  author = {G\"{o}tz, Jan and Iglberger, Klaus and St\"{u}rmer, Markus and R\"{u}de,
+	Ulrich},
+  title = {Direct Numerical Simulation of Particulate Flows on 294912 Processor
+	Cores},
+  booktitle = {Proceedings of the 2010 ACM/IEEE International Conference for High
+	Performance Computing, Networking, Storage and Analysis},
+  year = {2010},
+  series = {SC '10},
+  pages = {1--11},
+  address = {Washington, DC, USA},
+  publisher = {IEEE Computer Society},
+  acmid = {1884697},
+  doi = {10.1109/SC.2010.20},
+  file = {GoetzIglbergerStuermerEtAl10.pdf:pdfGM/GoetzIglbergerStuermerEtAl10.pdf:PDF},
+  isbn = {978-1-4244-7559-9},
+  numpages = {11},
+  owner = {cbins},
+  url = {http://dx.doi.org/10.1109/SC.2010.20}
+}
+
 @INCOLLECTION{GellerTolkeKrafczyk06,
   author = {Geller, Sebastian and T{\"o}lke, Jonas and Krafczyk, Manfred},
-  title = {Lattice-Boltzmann Method on Quadtree-Type Grids for Fluid-Structure
+  title = {Lattice-{B}oltzmann Method on Quadtree-Type Grids for Fluid-Structure
 	Interaction},
   booktitle = {Fluid-Structure Interaction},
   publisher = {Springer Berlin Heidelberg},
@@ -737,7 +727,7 @@
 	is embedded into the parallel solution algorithm using multilevel
 	iterative solvers and adaptive grid refinement. Numerical experiments
 	on two massively parallel computers prove the efficiency of this
-	approach. },
+	approach.},
   annote = {unrefereed series,parallel},
   file = {juelich01.pdf 1:http\://wissrech.ins.uni-bonn.de/research/pub/zumbusch/juelich01.pdf 1:PDF;juelich01.ps.gz 1:http\://wissrech.ins.uni-bonn.de/research/pub/zumbusch/juelich01.ps.gz 1:PostScript;GriebelZumbusch02.pdf:pdfGM/GriebelZumbusch02.pdf:PDF},
   owner = {cbins}
@@ -745,8 +735,8 @@
 
 @ARTICLE{GuermondMinevShen06,
   author = {J.L. Guermond and P. Minev and Jie Shen},
-  title = {An overview of projection methods for incompressible flows },
-  journal = {Computer Methods in Applied Mechanics and Engineering },
+  title = {An overview of projection methods for incompressible flows},
+  journal = {Computer Methods in Applied Mechanics and Engineering},
   year = {2006},
   volume = {195},
   pages = {6011 - 6045},
@@ -760,7 +750,7 @@
 	theoretical and numerical convergence results available in the literature
 	are reviewed and open questions are discussed. The essential results
 	are summarized in a table which could serve as a useful reference
-	to numerical analysts and practitioners. },
+	to numerical analysts and practitioners.},
   doi = {http://dx.doi.org/10.1016/j.cma.2005.10.010},
   file = {GuermondMinevShen06.pdf:pdfGM/GuermondMinevShen06.pdf:PDF},
   issn = {0045-7825},
@@ -837,14 +827,14 @@
 @ARTICLE{HasertMasilamaniZimnyEtAl14,
   author = {Manuel Hasert and Kannan Masilamani and Simon Zimny and Harald Klimach
 	and Jiaxing Qi and Jörg Bernsdorf and Sabine Roller},
-  title = {Complex fluid simulations with the parallel tree-based Lattice Boltzmann
-	solver Musubi },
-  journal = {Journal of Computational Science },
+  title = {Complex fluid simulations with the parallel tree-based Lattice {B}oltzmann
+	solver {M}usubi},
+  journal = {Journal of Computational Science},
   year = {2014},
   volume = {5},
   pages = {784 - 794},
   number = {5},
-  abstract = {Abstract We present the open source Lattice Boltzmann solver Musubi.
+  abstract = {We present the open source Lattice Boltzmann solver Musubi.
 	It is part of the parallel simulation framework APES, which utilizes
 	octrees to represent sparse meshes and provides tools from automatic
 	mesh generation to post-processing. The octree mesh representation
@@ -857,7 +847,7 @@
 	scalable simulation environment and elaborates its design principles
 	and implementation details. The efficiency of our approach is demonstrated
 	with a performance evaluation on two supercomputers and a comparison
-	to the widely used Lattice Boltzmann solver Palabos. },
+	to the widely used Lattice Boltzmann solver Palabos.},
   doi = {http://dx.doi.org/10.1016/j.jocs.2013.11.001},
   issn = {1877-7503},
   url = {http://www.sciencedirect.com/science/article/pii/S1877750313001270}
@@ -936,6 +926,15 @@
   number = {2},
   owner = {cbins},
   publisher = {SIAM}
+}
+
+@unpublished{IsaacBursteddeWilcoxEtAl15,
+  author = {Tobin Isaac and Carsten Burstedde and Lucas C. Wilcox and Omar Ghattas},
+  title = {Recursive algorithms for distributed forests of octrees},
+  year = {2015},
+  note = {Accepted for publication in SIAM Journal on Scientific Computing},
+  owner = {cbins},
+  url = {http://arxiv.org/abs/1406.0089}
 }
 
 @BOOK{Kelley03,
@@ -1030,9 +1029,9 @@
 	the face sharing order as an easy-to-use-method to insert the elements
 	into the tree and compare it to a more classical approach keeping
 	explicitly track of the qSFC. For comparison we derive statistical
-	measures of locality based on the mesh connectivity
-	and show that both qSFC strategies deliver a good quality, but with
-	a slightly better performance of the face sharing order.},
+	measures of locality based on the mesh connectivity and show that
+	both qSFC strategies deliver a good quality, but with a slightly
+	better performance of the face sharing order.},
   date = {2014},
   doi = {10.3233/978-1-61499-381-0-833},
   isbn = {978-1-61499-380-3},
@@ -1139,8 +1138,8 @@
   volume = {18},
   pages = {2127--2136},
   number = {0},
-  note = {2013 International Conference on Computational Science },
-  abstract = {Abstract This paper introduces two electron beam absorption algorithms
+  note = {2013 International Conference on Computational Science},
+  abstract = {This paper introduces two electron beam absorption algorithms
 	for a three dimensional thermal free surface lattice Boltzmann method
 	simulating electron beam melting processes. The algorithms use a
 	state-of-the-art volume of fluid free surface method of the lattice
@@ -1153,7 +1152,7 @@
 	absorption behavior against the analytical solution is proceeded
 	and a concluding example in a powder bed shows the capability of
 	the approach to simulate and support understanding the electron beam
-	melting process. },
+	melting process.},
   doi = {http://dx.doi.org/10.1016/j.procs.2013.05.383},
   file = {MarklAmmerLjungbladEtAl13.pdf:pdfGM/MarklAmmerLjungbladEtAl13.pdf:PDF},
   issn = {1877-0509},
@@ -1400,18 +1399,18 @@
 @ARTICLE{SchonherrKucherGeierEtAl11,
   author = {M. Sch{\"o}nherr and K. Kucher and M. Geier and M. Stiebler and S.
 	Freudiger and M. Krafczyk},
-  title = {Multi-thread implementations of the lattice Boltzmann method on non-uniform
-	grids for \{CPUs\} and \{GPUs\} },
-  journal = {Computers \& Mathematics with Applications },
+  title = {Multi-thread implementations of the lattice {B}oltzmann method on non-uniform
+	grids for {CPUs} and {GPUs}},
+  journal = {Computers {\&} Mathematics with Applications},
   year = {2011},
   volume = {61},
   pages = {3730 - 3743},
   number = {12},
-  note = {Mesoscopic Methods for Engineering and Science — Proceedings of ICMMES-09
-	Mesoscopic Methods for Engineering and Science },
+  note = {Mesoscopic Methods for Engineering and Science - Proceedings of ICMMES-09
+	Mesoscopic Methods for Engineering and Science},
   abstract = {Two multi-thread based parallel implementations of the lattice Boltzmann
 	method for non-uniform grids on different hardware platforms are
-	compared in this paper: a multi-core \{CPU\} implementation and an
+	compared in this paper: a multi-core {CPU} implementation and an
 	implementation on General Purpose Graphics Processing Units (GPGPU).
 	Both codes employ second order accurate compact interpolation at
 	the interfaces, coupling grids of different resolutions. Since the
@@ -1420,8 +1419,8 @@
 	method for uniform grids in terms of node updates per second. To
 	the best of our knowledge, the current paper presents the first study
 	on multi-core parallelization of the lattice Boltzmann method with
-	inhomogeneous grid spacing and nested time stepping for both \{CPUs\}
-	and GPUs. },
+	inhomogeneous grid spacing and nested time stepping for both {CPUs}
+	and GPUs.},
   doi = {http://dx.doi.org/10.1016/j.camwa.2011.04.012},
   issn = {0898-1221},
   url = {http://www.sciencedirect.com/science/article/pii/S0898122111002999}
@@ -1462,21 +1461,8 @@
   owner = {cbins}
 }
 
-@ARTICLE{Temam69,
-  author = {Temam, Roger},
-  title = {Sur l'approximation de la solution des {\'e}quations de Navier-Stokes
-	par la m{\'e}thode des pas fractionnaires (I)},
-  journal = {Archive for Rational Mechanics and Analysis},
-  year = {1969},
-  volume = {32},
-  pages = {135--153},
-  number = {2},
-  owner = {cbins},
-  publisher = {Springer}
-}
-
 @MANUAL{HypreTeam12,
-  title = {\texttt{hypre} -- High Performance Preconditioners Users Manual},
+  title = {{\texttt{hypre}} -- High Performance Preconditioners Users Manual},
   author = {The Hypre Team},
   organization = {Center for Applied Scientific Computing, Lawrence Livermore National
 	Laboratory},
@@ -1493,6 +1479,19 @@
   year = {2012},
   note = {Software version 2.0.9b},
   owner = {cbins}
+}
+
+@ARTICLE{Temam69,
+  author = {Temam, Roger},
+  title = {Sur l'approximation de la solution des {\'e}quations de Navier-Stokes
+	par la m{\'e}thode des pas fractionnaires (I)},
+  journal = {Archive for Rational Mechanics and Analysis},
+  year = {1969},
+  volume = {32},
+  pages = {135--153},
+  number = {2},
+  owner = {cbins},
+  publisher = {Springer}
 }
 
 @ARTICLE{TuDevilleDheurEtAl92,
@@ -1519,15 +1518,15 @@
 
 @ARTICLE{TolkeFreudigerKrafczyk06,
   author = {Jonas T{\"o}lke and S{\"o}ren Freudiger and Manfred Krafczyk},
-  title = {An adaptive scheme using hierarchical grids for lattice Boltzmann
-	multi-phase flow simulations },
-  journal = {Computers \& Fluids },
+  title = {An adaptive scheme using hierarchical grids for lattice {B}oltzmann
+	multi-phase flow simulations},
+  journal = {Computers {\&} Fluids},
   year = {2006},
   volume = {35},
   pages = {820 - 830},
   number = {8–9},
   note = {Proceedings of the First International Conference for Mesoscopic
-	Methods in Engineering and Science },
+	Methods in Engineering and Science},
   doi = {http://dx.doi.org/10.1016/j.compfluid.2005.08.010},
   issn = {0045-7930},
   url = {http://www.sciencedirect.com/science/article/pii/S0045793005001441}
