Another version of bonn.bib

--- a/paper/tex/bonn.bib
+++ b/paper/tex/bonn.bib
@@ -42,7 +42,7 @@
   journal = {Computers {\&} Mathematics with Applications},
   year = {2014},
   volume = {67},
-  pages = {318 - 330},
+  pages = {318-330},
   number = {2},
   note = {Mesoscopic Methods for Engineering and Science (Proceedings of ICMMES-2012,
 	Taipei, Taiwan, 23--27 July 2012)},
@@ -200,7 +200,7 @@
 
 @ARTICLE{BartuschatFischermeierGustavssonEtAl15,
   author = {Dominik Bartuschat and Ellen Fischermeier and Katarina Gustavsson
-	and Ulrich R{\"{u}}de},
+	and Ulrich R{\"u}de},
   title = {Two Computational Models for Simulating the Tumbling Motion of Elongated
 	Particles in Fluids},
   journal = {CoRR},
@@ -306,20 +306,20 @@
   journal = {International Journal of Multiphase Flow},
   year = {2015},
   volume = {68},
-  pages = {71 - 79},
+  pages = {71-79},
   number = {0},
   abstract = {This paper presents a numerical study of flow through static
 	random assemblies of monodisperse, spherical particles. A lattice
 	Boltzmann approach based on a two relaxation time collision operator
 	is used to obtain reliable predictions of the particle drag by direct
 	numerical simulation. From these predictions a closure law F (Re
-	p, {\phi}) of the drag force relationship to the bed density φ and the
+	p, {$\phi$}) of the drag force relationship to the bed density {$\phi$} and the
 	particle Reynolds number Re p is derived. The present study includes
 	densities φ ranging from 0.01 to 0.35 with Re p ranging up to 300,
 	that is compiled into a single drag correlation valid for the whole
 	range. The correlation has a more compact expression compared to
 	others previously reported in literature. At low particle densities,
-	the new correlation is close to the widely-used Wen {\&} Yu - correlation.
+	the new correlation is close to the widely-used Wen {\&} Yu-correlation.
 	Recently, there has been reported a discrepancy between results obtained
 	using different numerical methods, namely the comprehensive lattice
 	Boltzmann study of Beetstra et al. (2007) and the predictions based
@@ -340,7 +340,7 @@
   journal = {Computers {\&} Mathematics with Applications},
   year = {2013},
   volume = {65},
-  pages = {901 - 913},
+  pages = {901-913},
   number = {6},
   note = {Mesoscopic Methods in Engineering and Science},
   abstract = {This paper is devoted to the simulation of floating rigid bodies in
@@ -396,8 +396,8 @@
   author = {Brezzi, F.},
   title = {On the existence, uniqueness and approximation of saddle-point problems
 	arising from lagrangian multipliers},
-  journal = {ESAIM: Mathematical Modelling and Numerical Analysis - Mod\'elisation
-	Math\'ematique et Analyse Num\'erique},
+  journal = {ESAIM: Mathematical Modelling and Numerical Analysis -- Mod{\'e}lisation
+	Math{\'e}matique et Analyse Num{\'e}rique},
   year = {1974},
   volume = {8},
   pages = {129-151},
@@ -485,7 +485,7 @@
   journal = {Computers {\&} Fluids},
   year = {2011},
   volume = {45},
-  pages = {177 - 186},
+  pages = {177-186},
   number = {1},
   note = {22nd International Conference on Parallel Computational Fluid Dynamics
 	(ParCFD 2010) ParCFD},
@@ -552,7 +552,7 @@
   journal = {Journal of Computational Science},
   year = {2011},
   volume = {2},
-  pages = {105 - 112},
+  pages = {105-112},
   number = {2},
   note = {Simulation Software for Supercomputers},
   abstract = {WaLBerla (Widely applicable Lattice-Boltzmann from Erlangen) is a
@@ -650,7 +650,7 @@
 }
 
 @INPROCEEDINGS{GoetzIglbergerStuermerEtAl10,
-  author = {G\"{o}tz, Jan and Iglberger, Klaus and St\"{u}rmer, Markus and R\"{u}de,
+  author = {G{\"o}tz, Jan and Iglberger, Klaus and St{\"u}rmer, Markus and R{\"u}de,
 	Ulrich},
   title = {Direct Numerical Simulation of Particulate Flows on 294912 Processor
 	Cores},
@@ -671,7 +671,7 @@
 }
 
 @INPROCEEDINGS{GotzIglbergerSturmerEtAl10,
-  author = {G\"{o}tz, Jan and Iglberger, Klaus and St\"{u}rmer, Markus and R\"{u}de,
+  author = {G{\"o}tz, Jan and Iglberger, Klaus and St{\"u}rmer, Markus and R{\"u}de,
 	Ulrich},
   title = {Direct Numerical Simulation of Particulate Flows on 294912 Processor
 	Cores},
@@ -739,7 +739,7 @@
   journal = {Computer Methods in Applied Mechanics and Engineering},
   year = {2006},
   volume = {195},
-  pages = {6011 - 6045},
+  pages = {6011-6045},
   number = {44–47},
   abstract = {A series of numerical issues related to the analysis and implementation
 	of fractional step methods for incompressible flows are addressed
@@ -832,7 +832,7 @@
   journal = {Journal of Computational Science},
   year = {2014},
   volume = {5},
-  pages = {784 - 794},
+  pages = {784-794},
   number = {5},
   abstract = {We present the open source Lattice Boltzmann solver Musubi.
 	It is part of the parallel simulation framework APES, which utilizes
@@ -1242,8 +1242,8 @@
   author = {Pabel, Roland},
   title = {Adaptive Wavelet Methods for Variational Formulations of Nonlinear
 	Elliptic PDEs on Tensor-Product Domains},
-  school = {Mathematisch-Naturwissenschaftlichen Fakult\"{a}t, Universit\"{a}t
-	zu K\"{o}ln},
+  school = {Mathematisch-Naturwissenschaftlichen Fakult{\"a}t, Universit{\"a}t
+	zu K{\"o}ln},
   year = {2015},
   file = {Pabel15.pdf:pdfNZ/Pabel15.pdf:PDF},
   owner = {cbins},
@@ -1288,7 +1288,7 @@
 }
 
 @ARTICLE{PreclikRuede15,
-  author = {Tobias Preclik and Ulrich R{\"{u}}de},
+  author = {Tobias Preclik and Ulrich R{\"u}de},
   title = {Ultrascale Simulations of Non-smooth Granular Dynamics},
   journal = {CoRR},
   year = {2015},
@@ -1404,9 +1404,9 @@
   journal = {Computers {\&} Mathematics with Applications},
   year = {2011},
   volume = {61},
-  pages = {3730 - 3743},
+  pages = {3730-3743},
   number = {12},
-  note = {Mesoscopic Methods for Engineering and Science - Proceedings of ICMMES-09
+  note = {Mesoscopic Methods for Engineering and Science -- Proceedings of ICMMES-09
 	Mesoscopic Methods for Engineering and Science},
   abstract = {Two multi-thread based parallel implementations of the lattice Boltzmann
 	method for non-uniform grids on different hardware platforms are
@@ -1523,7 +1523,7 @@
   journal = {Computers {\&} Fluids},
   year = {2006},
   volume = {35},
-  pages = {820 - 830},
+  pages = {820-830},
   number = {8–9},
   note = {Proceedings of the First International Conference for Mesoscopic
 	Methods in Engineering and Science},
