Go through introduction

--- a/paper/tex/abstract.tex
+++ b/paper/tex/abstract.tex
@@ -25,7 +25,8 @@ and useful to researchers working with the level-set framework and modeling
 multi-scale physics in general.
 \end{abstract}
 \begin{keyword}
-Quadtree/Octree Grids \sep Parallel Computing \sep Space Filling Curves \sep
-Semi-Lagrangian Method \sep Level-Set Method
+Quadtree/Octree Grids \sep Parallel Computing \sep Semi-Lagrangian Method \sep
+Level-Set Method \sep Adaptive Mesh Refinement \sep Space Filling Curves
+\sep Stefan Problem
 \end{keyword}
 \maketitle
