--- a/paper/tex/refs.bib
+++ b/paper/tex/refs.bib
@@ -13,8 +13,9 @@
 	Author = {C. Burstedde},
 	Date-Added = {2014-09-05 17:17:06 +0000},
 	Date-Modified = {2014-09-05 17:20:44 +0000},
-	Howpublished = {\url{http://p4est.github.io}},
-	url = {http://p4est.github.io},
+	Howpublished = {\url{http://www.p4est.org/}},
+	url = {http://www.p4est.org/},
+	note = {Last accessed June 19, 2015},
 	Title = {\texttt{p4est}: {Parallel Adaptive Mesh Refinement on Forests of Octrees}}}
 
 @inproceedings{Sampath;Adavani;Sundar;etal:08:Dendro:-parallel-alg,
@@ -66,6 +67,13 @@
 	Title = {The {Z}oltan and {I}sorropia parallel toolkits for combinatorial scientific computing: Partitioning, ordering and coloring},
 	Volume = {20},
 	Year = {2012}}
+
+@Manual{KarypisKumar95,
+  Title                    = {{METIS} -- Unstructured Graph Partitioning and Sparse
+                              Matrix Ordering System, Version 2.0},
+  Author                   = {George Karypis and Vipin Kumar},
+  Year                     = {1995}
+}
 
 @article{Karypis;Kumar:98:A-parallel-algorithm,
 	Author = {Karypis, George and Kumar, Vipin},
@@ -458,3 +466,23 @@
 	Publisher = {Birkh{\"{a}}user Press},
 	Title = {Efficient Management of Parallelism in Object Oriented Numerical Software Libraries},
 	Year = {1997}}
+
+@InProceedings{SahniZhouShephardEtAl09,
+  Title                    = {Scalable Implicit Finite Element Solver for Massively
+                              Parallel Processing with Demonstration to {160K} cores},
+  Author                   = {O. Sahni and M. Zhou and M. S. Shephard and K. E. Jansen},
+  Booktitle                = {SC09: Proceedings of the International Conference for
+                              High Performance Computing, Networking, Storage and Analysis},
+  Year                     = {2009},
+  Doi                      = {10.1145/1654059.1654129}
+}
+
+@Article{GriebelZumbusch99,
+  Title                    = {Parallel Multigrid in an Adaptive {PDE} Solver based on
+                              Hashing and Space-Filling Curves},
+  Author                   = {Michael Griebel and Gerhard W. Zumbusch},
+  Journal                  = {Parallel Computing},
+  Year                     = {1999},
+  Pages                    = {827-843},
+  Volume                   = {25}
+}
