Level set method and acknowledgement

--- a/paper/tex/conclusion.tex
+++ b/paper/tex/conclusion.tex
@@ -7,4 +7,11 @@ In particular we showed that the scalability of the semi-Lagrangian algorithm, d
 Finally, an application of these algorithms is presented in modeling the solidification process by solving a Stefan problem. This application clearly illustrates the applicability of our algorithms to complex multi-scale problems that cannot be treated practically using the domain decomposition techniques on uniform grids. We believe that our findings can serve as a basis to simulating a wide range of multi-scale problems and free body problems.
 
 \section*{Acknowledgment} 
-The funding for this project was provided by ONR N00014-11-1-0027. We would also like to thank the technical staff at the Texas Advanced Computing Center (TACC) and the developer community of PETSc library for their valuable suggestions during this project.
+The funding for this project was provided by ONR N00014-11-1-0027.
+We would also like to thank the technical staff at the Texas Advanced Computing
+Center (TACC) and the developer community of PETSc library for their valuable
+suggestions during this project.
+The third author acknowledges support by the Hausdorff Center for Mathematics
+(HCM) at Bonn University,
+% and the Transregio 32 research collaborative, both
+an initiative funded by the German Research Foundation (DFG).
