Go through section 3

--- a/paper/tex/draft.tex
+++ b/paper/tex/draft.tex
@@ -87,6 +87,7 @@
 \input{applications}
 \input{conclusion}
 
+\section*{References}
 \bibliographystyle{plain}
 \addcontentsline{toc}{section}{\refname}
 \bibliography{casl,refs,bonn}
