--- a/paper/tex/refs.bib
+++ b/paper/tex/refs.bib
@@ -486,3 +486,13 @@
   Pages                    = {827-843},
   Volume                   = {25}
 }
+
+@InProceedings{IsaacBursteddeGhattas12,
+  Title                    = {Low-Cost Parallel Algorithms for 2:1 Octree Balance},
+  Author                   = {Tobin Isaac and Carsten Burstedde and Omar Ghattas},
+  Booktitle                = {Proceedings of the 26th IEEE International Parallel
+                              {\&} Distributed Processing Symposium},
+  Year                     = {2012},
+  Note                     = {\url{http://dx.doi.org/10.1109/IPDPS.2012.47}},
+  Publisher                = {IEEE}
+}
